[13d074bae225b5bb2f0adecd47b43076ad29c149]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -8936,7 +8936,7 @@ It is possible to carry out both the total cancellation and the partial cancella
   <tbody>
     <tr>
       <td><code class="highlighter-rouge">A</code></td>
-      <td>Excessive address change. The customer has changed the billing address two or more times in the last six months.</td>
+      <td>CONFIRM THE ADDRESS: Excessive address change. The customer has changed the billing address two or more times in the last six months.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">B</code></td>
@@ -8944,7 +8944,7 @@ It is possible to carry out both the total cancellation and the partial cancella
     </tr>
     <tr>
       <td><code class="highlighter-rouge">C</code></td>
-      <td>Elevated credit card numbers. The customer has used more than six credit card numbers in the last six months.</td>
+      <td>CONFIRM THE PURCHASE WITH CARD HOLDER: The customer has used more than six credit card numbers in the last few months.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">D</code></td>
@@ -8956,31 +8956,31 @@ It is possible to carry out both the total cancellation and the partial cancella
     </tr>
     <tr>
       <td><code class="highlighter-rouge">F</code></td>
-      <td>Negative list. The account number, address, e-mail, or IP address for this purpose appears on your negative list.</td>
+      <td>CAUTION: Some of the following information relates to a transaction that has been reported as fraudulent (card, address, or email).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">G</code></td>
-      <td>Geolocation inconsistencies. The email client’s domain, phone number, billing address, shipping address, or IP address is suspect.</td>
+      <td>Computer location different from the location informed at the time of purchase. Attention!</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">H</code></td>
-      <td>Excessive name changes. The customer has changed the name two or more times in the last six months.</td>
+      <td>CONFIRM THE PURCHASE WITH CARD HOLDER: The customer has changed its name two or more times in the last months.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">I</code></td>
-      <td>Internet inconsistencies. The IP address and email domain are not consistent with the billing address.</td>
+      <td>CONFIRM THE ADDRESS: The IP address and email domain are not consistent with the billing address.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">N</code></td>
-      <td>Meaningless entrance. The client name and the address fields contain nonsense words or language.</td>
+      <td>CONFIRM THE CARD HOLDER AND THE ADDRESS: They contain meaningless words.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">O</code></td>
-      <td>Obscenities. Customer data contains obscene words.</td>
+      <td>CONFIRM THE CARD HOLDER AND THE ADDRESS: They contain meaningless words.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">P</code></td>
-      <td>Morphing identity. Multiple values ​​of an identity element are linked to a value of a different identity element. For example, multiple phone numbers are linked to a single account number.</td>
+      <td>CONFIRM THE CARD HOLDER AND THE ADDRESS: Registered information is shared between different clients.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Q</code></td>
@@ -8988,7 +8988,7 @@ It is possible to carry out both the total cancellation and the partial cancella
     </tr>
     <tr>
       <td><code class="highlighter-rouge">R</code></td>
-      <td>Risky order. The transaction, the customer, and the merchant show correlated risk information.</td>
+      <td>CONFIRM THE CARD HOLDER AND THE ADDRESS: There are correlated risk information in the order.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">T</code></td>
@@ -9000,15 +9000,15 @@ It is possible to carry out both the total cancellation and the partial cancella
     </tr>
     <tr>
       <td><code class="highlighter-rouge">V</code></td>
-      <td>Velocity. The account number has been used many times in the last 15 minutes.</td>
+      <td>CONFIRM THE PURCHASE WITH CARD HOLDER: The card has been used many times in the last 15 minutes.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">W</code></td>
-      <td>Marked as suspect. The billing or delivery address is similar to an address previously marked as suspicious.</td>
+      <td>CAUTION: The address is related to a transaction that has been reported as fraudulent.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Z</code></td>
-      <td>Invalid value. The request contains an unexpected value, a default value has been replaced. Although the transaction can still be processed, examine the request carefully for any anomalies.</td>
+      <td>CONFIRM THE ADDRESS: Billing and shipping addresses are not related.</td>
     </tr>
   </tbody>
 </table>
