[22668059799bc0c91996531b187352fa2cb2b9d6]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -8482,7 +8482,7 @@ Existem 3 tipos de configurações de analise de fraude disponiveis:</p>
     <tr>
       <td><code class="highlighter-rouge">Review</code></td>
       <td>Transação em revisão após análise de fraude</td>
-      <td>Transaçãoi encaminhada para analise manual - será analisada por BPO</td>
+      <td>Transação encaminhada para analise manual - será analisada por BPO</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Reject</code></td>
@@ -9056,10 +9056,6 @@ Existem 3 tipos de configurações de analise de fraude disponiveis:</p>
       <td>CONFIRME A COMPRA COM O PORTADOR DO CARTÃO: o cliente usou mais de seis cartões nos últimos meses.</td>
     </tr>
     <tr>
-      <td> </td>
-      <td> </td>
-    </tr>
-    <tr>
       <td><code class="highlighter-rouge">D</code></td>
       <td>Impacto do endereço de e-mail. O cliente usa um provedor de e-mail gratuito ou o endereço de email é arriscado.</td>
     </tr>
@@ -9094,10 +9090,6 @@ Existem 3 tipos de configurações de analise de fraude disponiveis:</p>
     <tr>
       <td><code class="highlighter-rouge">P</code></td>
       <td>CONFIRME O DONO DO CARTÃO E O ENDEREÇO: informações cadastrais estão compartilhadas entre diferentes clientes.</td>
-    </tr>
-    <tr>
-      <td> </td>
-      <td> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Q</code></td>
