[ee52a02aa1fd0547f58916cc2924d10f2dda435a]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -9013,6 +9013,8 @@ It is possible to carry out both the total cancellation and the partial cancella
   </tbody>
 </table>
 
+<h3 id="others">Others</h3>
+
 <h2 id="device-fingerprint">Device FingerPrint</h2>
 
 <h3 id="what-is-dfingerprint">What is D.FingerPrint</h3>
