[772f6595b1983fb4c29bca0c1be41cd042c00b88]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -9015,6 +9015,125 @@ It is possible to carry out both the total cancellation and the partial cancella
 
 <h3 id="others">Others</h3>
 
+<table>
+  <thead>
+    <tr>
+      <th>Type</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code class="highlighter-rouge">INV-EM</code></td>
+      <td>CONFIRM THE EMAIL: email is invalid.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">MM-EMBCO</code></td>
+      <td>Computer location different from the location informed the time of purchase. Attention!</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">MM-IPBC</code></td>
+      <td>CONFIRM THE ADDRESS: the billing address is not related to the IP location.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">MM-IPBCO</code></td>
+      <td>CONFIRM THE ADDRESS: the billing address is not related to the IP location.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">MM-IPBST</code></td>
+      <td>CONFIRM THE ADDRESS: the billing address is not related to the IP location.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">MM-IPEM</code></td>
+      <td>CONFIRM THE ADDRESS: the billing address is not related to the IP location.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">RISK-EM</code></td>
+      <td>CONFIRM PURCHASE AND THE EMAIL WITH CARD HOLDER: Email domain is high risk.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">UNV-NID</code></td>
+      <td>CONFIRM THE PURCHASE WITH CARD HOLDER: the IP used belongs to an anonymous proxy.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">UNV-RISK</code></td>
+      <td>CONFIRM THE PURCHASE WITH CARD HOLDER: the IP used is high risk.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">UNV-EMBCO</code></td>
+      <td>CONFIRM THE ADDRESS: the billing address is not related to the IP location.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">CON-POSNEG</code></td>
+      <td>CAUTION: some of the following information are related to a transaction that has been reported as fraudulent (card, address, or email).</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-BA</code></td>
+      <td>CAUTION: billing address related to a transaction reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-BCO</code></td>
+      <td>CAUTION: billing address related to a transaction reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-BIN</code></td>
+      <td>CAUTION: card BIN related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-BZC</code></td>
+      <td>CAUTION: zip code of the billing address related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-CC</code></td>
+      <td>CAUTION: card related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-EM</code></td>
+      <td>CAUTION: email related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-EMDOM</code></td>
+      <td>CAUTION: email domain related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-HIST</code></td>
+      <td>CAUTION: transaction is related to a transaction that has been reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-ID</code></td>
+      <td>CAUTION: card related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-IP</code></td>
+      <td>CAUTION: IP related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-IP3</code></td>
+      <td>CAUTION: IP related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-PEM</code></td>
+      <td>CAUTION: passenger email related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-PH</code></td>
+      <td>CAUTION: phone number related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-PID</code></td>
+      <td>CAUTION: passenger ID related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-PPH</code></td>
+      <td>CAUTION: passenger phone number related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NEG-SA</code></td>
+      <td>CAUTION: shipping address related to transactions reported as fraudulent.</td>
+    </tr>
+  </tbody>
+</table>
+
 <h2 id="device-fingerprint">Device FingerPrint</h2>
 
 <h3 id="what-is-dfingerprint">What is D.FingerPrint</h3>
