[4505ba65cd2e1381c1f972cd20438033df85dfd9]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -9131,6 +9131,94 @@ It is possible to carry out both the total cancellation and the partial cancella
       <td><code class="highlighter-rouge">NEG-SA</code></td>
       <td>CAUTION: shipping address related to transactions reported as fraudulent.</td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VEL-ADDR</code></td>
+      <td>CONFIRM THE PURCHASE AND THE ADDRESS WITH CARD HOLDER: There are many addresses related to the card or the email .</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VEL-CC</code></td>
+      <td>CONFIRM THE PURCHASE WITH CARD HOLDER: There are many cards related to the name or the email.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VEL-NAME</code></td>
+      <td>CONFIRM THE PURCHASE WITH CARD HOLDER: There are many names related to the card.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELS-CC</code></td>
+      <td>Card used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELI-CC</code></td>
+      <td>Card used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELL-CC</code></td>
+      <td>Card used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELV-CC</code></td>
+      <td>Card used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELS-EM</code></td>
+      <td>Email used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELI-EM</code></td>
+      <td>Email used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELL-EM</code></td>
+      <td>Email used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELV-EM</code></td>
+      <td>Email used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELS-IP</code></td>
+      <td>IP used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELI-IP</code></td>
+      <td>IP used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELL-IP</code></td>
+      <td>IP used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELV-IP</code></td>
+      <td>IP used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELS-SA</code></td>
+      <td>Shipping address used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELI-SA</code></td>
+      <td>Shipping address used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELL-SA</code></td>
+      <td>Shipping address used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELV-SA</code></td>
+      <td>Shipping address used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELS-TIP</code></td>
+      <td>IP used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELI-TIP</code></td>
+      <td>IP used many times recently.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">VELL-TIP</code></td>
+      <td>IP used many times recently.</td>
+    </tr>
   </tbody>
 </table>
 
