[b2c3231fc4c2628d8361faf9339ef9ad4602165c]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -9219,6 +9219,74 @@ It is possible to carry out both the total cancellation and the partial cancella
       <td><code class="highlighter-rouge">VELL-TIP</code></td>
       <td>IP used many times recently.</td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">BAD-FP</code></td>
+      <td>CAUTION: risk device.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">INTL-BIN</code></td>
+      <td>Credit card issued outside Brazil.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">MM-TZTLO</code></td>
+      <td>Device time zone is incompatible with country time zone.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">MUL-EM</code></td>
+      <td>The customer used many different email addresses in various orders.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NON-BC</code></td>
+      <td>Suspicious typing in city name.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NON-FN</code></td>
+      <td>The first and last name of the customer are identical.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">NON-LN</code></td>
+      <td>Suspicious typing on client’s last name.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">RISK-BC</code></td>
+      <td>Suspicious typing in city name.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">RISK-BIN</code></td>
+      <td>CAUTION: Card BIN related to transactions reported as fraudulent.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">RISK-DEV</code></td>
+      <td>CAUTION: risk device.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">RISK-FN</code></td>
+      <td>Suspicious typing in customer name.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">RISK-LN</code></td>
+      <td>Suspicious typing in customer last name.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">RISK-PIP</code></td>
+      <td>Risk proxy IP.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">RISK-SD</code></td>
+      <td>Country of shipment and billing are different.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">RISK-TB</code></td>
+      <td>Suspicious order time</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">RISK-TIP</code></td>
+      <td>Risk IP address.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">RISK-TS</code></td>
+      <td>Suspicious order time.</td>
+    </tr>
   </tbody>
 </table>
 
