[6520bf09cc5279f8d62707732ccc7dd68c518c3b]: Update 2019-07-10-solution-omni.md

--- a/en/manual/solution-omni.html
+++ b/en/manual/solution-omni.html
@@ -232,7 +232,7 @@
   </tbody>
 </table>
 
-<h2 id="credit-card-sale-without-password">Credit card sale without password</h2>
+<h2 id="credit-card-typed-sale-without-password">Credit card typed sale without password</h2>
 
 <h3 id="request">Request</h3>
 
