[cae0c46f968a419661d673fcdacde9bc996250e2]: Update 2019-07-10-solution-omni.md

--- a/en/manual/solution-omni.html
+++ b/en/manual/solution-omni.html
@@ -4005,19 +4005,19 @@
   </tbody>
 </table>
 
-<h1 id="desfazimento">Desfazimento</h1>
+<h1 id="depletion">Depletion</h1>
 
-<h2 id="desfaz-um-pagamento">Desfaz um pagamento</h2>
+<h2 id="undo-a-payment">Undo a payment</h2>
 
-<p>O pagamente retornou com sucesso e pode ser desfeito.</p>
+<p>The payment returned success and can be undone.</p>
 
-<p>Deve-se solicitar o desfazimento através do PaymentId recebido no retorno do pagamento.</p>
+<p>Depletion must be requested through PaymentId received on the return of payment.</p>
 
 <table>
   <thead>
     <tr>
       <th style="text-align: center">SandBox</th>
-      <th style="text-align: center">Produção</th>
+      <th style="text-align: center">Production</th>
     </tr>
   </thead>
   <tbody>
@@ -4028,7 +4028,7 @@
   </tbody>
 </table>
 
-<h3 id="requisição">Requisição</h3>
+<h3 id="request-10">Request</h3>
 
 <aside class="request"><span class="method delete">DELETE</span> <span class="endpoint">/1/physicalSales/{PaymentId}</span></aside>
 
@@ -4049,11 +4049,11 @@
 <table>
   <thead>
     <tr>
-      <th>Propriedade</th>
-      <th>Tipo</th>
-      <th>Tamanho</th>
-      <th>Obrigatório</th>
-      <th>Descrição</th>
+      <th>Property</th>
+      <th>Type</th>
+      <th>Size</th>
+      <th>Required</th>
+      <th>Description</th>
     </tr>
   </thead>
   <tbody>
@@ -4081,7 +4081,7 @@
   </tbody>
 </table>
 
-<h2 id="desfaz-um-pagamento-1">Desfaz um pagamento</h2>
+<h2 id="desfaz-um-pagamento">Desfaz um pagamento</h2>
 
 <p>Quando o pagamente não retornar, o mesmo deve ser desfeito.</p>
 
@@ -4102,7 +4102,7 @@
   </tbody>
 </table>
 
-<h3 id="requisição-1">Requisição</h3>
+<h3 id="requisição">Requisição</h3>
 
 <aside class="request"><span class="method delete">DELETE</span> <span class="endpoint">/1/physicalSales/orderId/{MerchantOrderId}</span></aside>
 
@@ -4178,7 +4178,7 @@
   </tbody>
 </table>
 
-<h3 id="requisição-2">Requisição</h3>
+<h3 id="requisição-1">Requisição</h3>
 
 <aside class="request"><span class="method get">GET</span> <span class="endpoint">/initialization/{TerminalId}</span></aside>
 
