[9eb7cdd5baa8d4053f5831dd3b4a240ebc1efd9d]: Update 2019-07-10-solution-omni.md

--- a/en/manual/solution-omni.html
+++ b/en/manual/solution-omni.html
@@ -4081,17 +4081,17 @@
   </tbody>
 </table>
 
-<h2 id="desfaz-um-pagamento">Desfaz um pagamento</h2>
+<h2 id="undo-a-payment-1">Undo a payment</h2>
 
-<p>Quando o pagamente não retornar, o mesmo deve ser desfeito.</p>
+<p>When the payment does not return, it must be undone.</p>
 
-<p>Para solicitar o desfazimento é necessário informar o MerchantOrderId enviado no pagamento.</p>
+<p>To request the depletion you must inform the MerchantOrderId sent on the payment.</p>
 
 <table>
   <thead>
     <tr>
       <th style="text-align: center">SandBox</th>
-      <th style="text-align: center">Produção</th>
+      <th style="text-align: center">Production</th>
     </tr>
   </thead>
   <tbody>
@@ -4102,7 +4102,7 @@
   </tbody>
 </table>
 
-<h3 id="requisição">Requisição</h3>
+<h3 id="request-11">Request</h3>
 
 <aside class="request"><span class="method delete">DELETE</span> <span class="endpoint">/1/physicalSales/orderId/{MerchantOrderId}</span></aside>
 
@@ -4123,11 +4123,11 @@
 <table>
   <thead>
     <tr>
-      <th>Propriedade</th>
-      <th>Tipo</th>
-      <th>Tamanho</th>
-      <th>Obrigatório</th>
-      <th>Descrição</th>
+      <th>Property</th>
+      <th>Type</th>
+      <th>Size</th>
+      <th>Required</th>
+      <th>Description</th>
     </tr>
   </thead>
   <tbody>
@@ -4178,7 +4178,7 @@
   </tbody>
 </table>
 
-<h3 id="requisição-1">Requisição</h3>
+<h3 id="requisição">Requisição</h3>
 
 <aside class="request"><span class="method get">GET</span> <span class="endpoint">/initialization/{TerminalId}</span></aside>
 
