--- a/en/manual/solution-omni.html
+++ b/en/manual/solution-omni.html
@@ -4155,19 +4155,19 @@
   </tbody>
 </table>
 
-<h1 id="baixa-de-parâmetros">Baixa de parâmetros</h1>
+<h1 id="parameters-download">Parameters Download</h1>
 
-<p>Essa operação é necessária para que o parceiro de negócio / Subadquirente receba todas as tabelas de parâmetros necessários para que a solução de captura possa efetuar as transações via chamada de API. Essa informação será recebida através de API e deverá ser instalada na BC</p>
+<p>This operation is required for the business partner/sub-acquire to receive all required parameter tables so that the capture solution can perform transactions via the API call. This information will be received through the API and should be installed at the BC.</p>
 
-<h2 id="inicialização-de-um-terminal">Inicialização de um terminal</h2>
+<h2 id="initialization-of-a-terminal">Initialization of a terminal</h2>
 
-<p>Solicita as tabelas e parametros para operação do terminal</p>
+<p>Request tables and parameters for terminal operation.</p>
 
 <table>
   <thead>
     <tr>
       <th style="text-align: center">SandBox</th>
-      <th style="text-align: center">Produção</th>
+      <th style="text-align: center">Production</th>
     </tr>
   </thead>
   <tbody>
@@ -4178,7 +4178,7 @@
   </tbody>
 </table>
 
-<h3 id="requisição">Requisição</h3>
+<h3 id="request-12">Request</h3>
 
 <aside class="request"><span class="method get">GET</span> <span class="endpoint">/initialization/{TerminalId}</span></aside>
 
@@ -4368,11 +4368,11 @@
 <table>
   <thead>
     <tr>
-      <th>Propriedade</th>
-      <th>Tipo</th>
-      <th>Tamanho</th>
-      <th>Obrigatório</th>
-      <th>Descrição</th>
+      <th>Property</th>
+      <th>Type</th>
+      <th>Size</th>
+      <th>Required</th>
+      <th>Description</th>
     </tr>
   </thead>
   <tbody>
