[2049ff2dee30a2efb6bd82894fc9ca3967b25a63]: Merge pull request #238 from DeveloperCielo/tsaitobraspag-patch-169
Update 2018-09-10-emv3ds.md

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -1348,13 +1348,13 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
     <tr>
       <td>Payment.ExternalAuthentication.Eci</td>
       <td>E-Commerce Indicator retornado no processo de autenticação</td>
-      <td>Numérico [até 3 posições]</td>
+      <td>Numérico [1 posição]</td>
       <td>Sim</td>
     </tr>
     <tr>
       <td>Payment.ExternalAuthentication.Version</td>
       <td>Versão do 3DS utilizado no processo de autenticação</td>
-      <td>Alfanumérico [1 posições]</td>
+      <td>Alfanumérico [1 posição]</td>
       <td>Sim, quando a versão do 3DS for "2"</td>
     </tr>
     <tr>
@@ -1430,7 +1430,7 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
     <tr>
       <td>eci</td>
       <td>E-Commerce Indicator retornado no processo de autenticação</td>
-      <td>Numérico [até 3 posições]</td>
+      <td>Numérico [1 posição]</td>
       <td>Sim</td>
     </tr>
     <tr>
