[43df8e500d6330c2558cafb3637777eedafa8acf]: Update 2018-09-10-emv3ds.md

--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -171,11 +171,11 @@ Currently are available:</p>
 
 <p><strong>- Mastercard:</strong> the brand has a Stand-In model, in case that the issuer is not able yet to respond an authenticated request using 3DS 2.0 EMV. In this scenario, Mastercard evaluates the uploaded data, for example the client’s historical behavioral and transactional classifying authentication requests as “Low Risk” and “No Low Risk” in Stand-In mode. With this information, the Issuers have a protection even if they do not have their own solution of 3DS 2.0, and will have greater confidence in authenticated transactions. In Stand-In cases, Mastercard will respond to the authentication in 100% of cases silently (no challenge to the carrier) and, once the transaction has been authenticated, the liability in case of fraud will remain with the Issuer.</p>
 
-<aside class="notice">Issuers that are ready with its own solution of 3DS 2.0 Mastercard: Santander (Debit and Credit), PagSeguro (Credit), C6 (Debit and Credit), Realize (Credit), Itaú (Credit) e Acesso (Credit). The rest of the issuers will work,  for the time being, with the Mastercard Stand-In solution.</aside>
+<aside class="notice">Issuers that are ready with its own solution of 3DS 2.0 Mastercard: Santander (Debit and Credit), PagSeguro (Credit), C6 (Debit and Credit), Realize (Credit), Itaú (Credit) and Acesso (Credit). The rest of the issuers will work,  for the time being, with the Mastercard Stand-In solution.</aside>
 
 <p><strong>- Visa:</strong> the card brand does not has a Stand-In model and just issuers 100% ready with its own solution are able to respond to an authenticated request using the 3DS 2.0 EMV.</p>
 
-<aside class="notice"> Issuers that are ready with its own solution of 3DS 2.0 Visa: Caixa (Credit – currently with silent authentication, no challenge), Santander (Debit and Credit), Itaú (Credit – currently with silent authentication, no challenge), Porto Seguro (Credit), Banco Neon (Credit) e Midway (Credit).</aside>
+<aside class="notice"> Issuers that are ready with its own solution of 3DS 2.0 Visa: Caixa (Credit – currently with silent authentication, no challenge), Santander (Debit and Credit), Itaú (Credit – currently with silent authentication, no challenge), Porto Seguro (Credit), Banco Neon (Credit) and Midway (Credit).</aside>
 
 <h2 id="what-is-the-data-only---notification-only">What is the Data Only - Notification Only</h2>
 
